my first commit

--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
 
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-   <link rel="icon" type="image/png" href="img/favicon.png">
+   <link rel="icon" type="image/png" href="img/My Logo.png">
 
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.4.0/remixicon.css" crossorigin="">
+   <iconify-icon icon="logos:vitejs"></iconify-icon>
 
    <script src="scrollreveal.min.js"></script>
 
    <link rel="stylesheet" href="styles.css">
 
-   <title>Saqib Malik | Portfolio</title>
+   <title>Muhammad Amoo | Portfolio</title>
 
 </head>
 
@@ -24,13 +25,13 @@
    <header class="header" id="header">
       <nav class="nav container">
          <a href="#" class="nav__logo">
-            <span class="nav__logo-circle">S</span>
-            <span class="nav__logo-name">Saqib.</span>
+            <span class="nav__logo-circle"><img src="./img/My Logo.png" alt=""></span>
+            <span class="nav__logo-name">ruxAMB</span>
          </a>
 
          <div class="nav__menu" id="nav-menu">
             <span class="nav__title">Menu</span>
-            <h3 class="nav__name">Saqib</h3>
+            <h3 class="nav__name">DruxAMB</h3>
             <ul class="nav__list">
                <li class="nav__item">
                   <a href="#home" class="nav__link active-link">Home</a>
@@ -39,17 +40,17 @@
                <li class="nav__item">
                   <a href="#projects" class="nav__link">Projects</a>
                </li>
-
+<!-- 
                <li class="nav__item">
                   <a href="#certs" class="nav__link">Certifications</a>
-               </li>
+               </li> -->
 
                <li class="nav__item">
                   <a href="#contact" class="nav__link">Contact Me</a>
                </li>
 
                <li class="nav__item">
-                  <a href="https://drive.google.com/u/0/uc?id=1pVxr_qaEqs3Cz_-LxtYxG_LigAA3N0sW&export=download" class="nav__link nav__link-button">Resume <i class="ri-download-2-fill"></i></a>
+                  <a href="https://eu.docs.wps.com/l/sIF2CvJPMAeD-maoG?v=v2" class="nav__link nav__link-button">Resume <i class="ri-download-2-fill"></i></a>
                </li>
 
             </ul>
@@ -73,12 +74,12 @@
       <section class="home section" id="home">
          <div class="home__container container grid">
             <h1 class="home__name">
-               Saqib Malik
+               Muhammad Amoo
             </h1>
             <div class="home__perfil">
                <div class="home__info">
                   <div class="home__image">
-                     <img class="home__img" src="img/about-perfil.jpg" alt="image">
+                     <img class="home__img" src="./img/profile2.png" id="profile" alt="image">
                      <div class="home__shadow"></div>
                      <img class="home__arrow" src="img/curved-arrow.svg" alt="arrow">
                      <img class="home__line" src="img/random-lines.svg" alt="lines">
@@ -86,13 +87,16 @@
                      <div class="geometric-box"></div>
                   </div>
                   <div class="home__social">
-                     <a class="home__social-link" href="mailto:maliksaqib.dev@gmail.com">
+                     <a class="home__social-link" href="mailto:druxambsite@gmail.com">
                         <i class="ri-mail-line"></i>
                      </a>
-                     <a class="home__social-link" href="https://www.linkedin.com/in/malik-saqib-236744255/" target="_blank">
-                        <i class="ri-linkedin-box-line"></i>
+                     <a class="home__social-link" href="https://twitter.com/DruxAMB" target="_blank">
+                        <i class="ri-twitter-line"></i>
                      </a>
-                     <a class="home__social-link" href="https://github.com/maliksaqibahmad/" target="_blank">
+                     <a class="home__social-link" href="https://www.instagram.com/druxamb" target="_blank">
+                        <i class="ri-instagram-line"></i>
+                     </a>
+                     <a class="home__social-link" href="https://github.com/DruxAMB" target="_blank">
                         <i class="ri-github-line"></i>
                      </a>
                   </div>
@@ -129,6 +133,10 @@
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-plain.svg" alt="Skill 2">
                 <p>CSS</p>
             </div>
+            <div class="skill">          
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/devicon/devicon-original.svg" />
+                <p>DEVICON</p>
+            </div>
             <div class="skill">
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="Skill 3">
                 <p>JAVASCRIPT</p>
@@ -137,17 +145,25 @@
                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" alt="Skill 3">
                <p>REACT</p>
            </div>
-           <div class="skill">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/jquery/jquery-original.svg" alt="Skill 3">
-            <p>JQUERY</p>
-        </div>
-        <div class="skill">
-         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/angularjs/angularjs-plain.svg" alt="Skill 3">
-         <p>ANGULAR</p>
-     </div>
+            <div class="skill">
+               <iconify-icon icon="logos:vitejs" style="font-size: 5rem;"></iconify-icon>
+               <p>VITE JS</p>
+           </div>
      <div class="skill">
       <img class="skill__img" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="Skill 3">
       <p>GITHUB</p>
+  </div>
+     <div class="skill">    
+      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" />
+      <p>GIT</p>
+  </div>
+   <div class="skill">    
+      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bash/bash-original.svg" />
+      <p>BASH</p>
+  </div>
+   <div class="skill">       
+      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/npm/npm-original-wordmark.svg" />       
+      <p>NPM</p>
   </div>
   <div class="skill">
    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-plain.svg" alt="Skill 3">
@@ -158,16 +174,16 @@
    <p>TAILWIND</p>
 </div>
 <div class="skill">
-   <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/php/php-plain.svg" alt="Skill 3">
-   <p>PHP</p>
-</div>
-<div class="skill">
-   <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg" alt="Skill 3">
-   <p>MY SQL</p>
-</div>
-<div class="skill">
    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" alt="Skill 3">
    <p>NODE JS</p>
+</div>
+<div class="skill">    
+   <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/express/express-original.svg" />             
+   <p>EXPRESS JS</p>
+</div>
+<div class="skill">   
+   <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/discordjs/discordjs-original.svg" />        
+   <p>DISCORD JS</p>
 </div>
 <div class="skill">
    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-plain.svg" alt="Skill 3">
@@ -178,8 +194,24 @@
    <p>PYTHON</p>
 </div>
 <div class="skill">
-   <img class="skill__img" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/flask/flask-original.svg" alt="Skill 3">
-   <p>FLASK</p>
+   <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original.svg" />
+   <p>VS CODE</p>
+</div>
+<div class="skill">
+   <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/wordpress/wordpress-plain.svg" alt="Skill 3">
+   <p>WORDPRESS</p>
+</div>
+<div class="skill">
+   <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/figma/figma-original.svg" />
+   <p>FIGMA</p>
+</div>
+<div class="skill"> 
+   <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/illustrator/illustrator-plain.svg" />         
+   <p>ILLUSTRATOR</p>
+</div>
+<div class="skill">
+   <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/canva/canva-original.svg" />
+   <p>CANVA</p>
 </div>
         </div>
       </section>
@@ -192,8 +224,8 @@
 
             <article class="projects__card">
                <div class="projects__image">
-                  <img class="projects__img" src="img/project-2.jpg" alt="image">
-                  <a class="projects__button button" href="https://maliksaqibahmad.github.io/portfolio/" target="_blank">
+                  <img class="projects__img" src="img/david.PNG" alt="image">
+                  <a class="projects__button button" href="https://drux-amb-1st-portfolio-bpnj.vercel.app/" target="_blank">
                      <i class="ri-arrow-right-up-line"></i>
                   </a>
                </div>
@@ -205,11 +237,29 @@
                   </p>
                </div>
                <div class="projects__buttons">
-                  <a class="projects__link" href="https://github.com/maliksaqibahmad/portfolio" target="_blank">
+                  <a class="projects__link" href="https://github.com/DruxAMB/David-Aiyegoro-Portfoli0" target="_blank">
                      <i class="ri-github-line"> View</i>
                   </a>
-                  <a class="projects__link" href="https://codepen.io/Saqib-the-encoder/pen/Jjwraab" target="_blank">
-                     <i class="ri-codepen-line"> View</i>
+               </div>
+            </article>
+
+            <article class="projects__card">
+               <div class="projects__image">
+                  <img class="projects__img" src="img/scientificCalculatorProject.PNG" alt="image">
+                  <a class="projects__button button" href="https://scientific-calculator-lyart.vercel.app/" target="_blank">
+                     <i class="ri-arrow-right-up-line"></i>
+                  </a>
+               </div>
+               <div class="projects__content">
+                  <h3 class="projects__subtitle">Website</h3>
+                  <h2 class="projects__title">Scientific Calculator Website</h2>
+                  <p class="projects__description">
+                     A Functional Scientific Calculator
+                  </p>
+               </div>
+               <div class="projects__buttons">
+                  <a class="projects__link" href="https://github.com/DruxAMB/scientific-calculator-" target="_blank">
+                     <i class="ri-github-line"> View</i>
                   </a>
                </div>
             </article>
@@ -217,7 +267,7 @@
             <article class="projects__card">
                <div class="projects__image">
                   <img class="projects__img" src="img/project-1.jpg" alt="image">
-                  <a class="projects__button button" href="https://maliksaqibahmad.github.io/cars/" target="_blank">
+                  <a class="projects__button button" href="https://car-site-peach.vercel.app/#" target="_blank">
                      <i class="ri-arrow-right-up-line"></i>
                   </a>
                </div>
@@ -229,7 +279,28 @@
                   </p>
                </div>
                <div class="projects__buttons">
-                  <a class="projects__link" href="https://github.com/maliksaqibahmad/cars" target="_blank">
+                  <a class="projects__link" href="https://github.com/DruxAMB/carSite" target="_blank">
+                     <i class="ri-github-line"> View</i>
+                  </a>
+               </div>
+            </article>
+
+            <article class="projects__card">
+               <div class="projects__image">
+                  <img class="projects__img" src="img/tictaktoeGame.PNG" alt="image">
+                  <a class="projects__button button" href="https://tic-tac-toe-umber-pi.vercel.app/" target="_blank">
+                     <i class="ri-arrow-right-up-line"></i>
+                  </a>
+               </div>
+               <div class="projects__content">
+                  <h3 class="projects__subtitle">Website</h3>
+                  <h2 class="projects__title">Tic-Tac-Toe Website</h2>
+                  <p class="projects__description">
+                     A website format of tic-tac-toe
+                  </p>
+               </div>
+               <div class="projects__buttons">
+                  <a class="projects__link" href="https://github.com/DruxAMB/Tic-Tac-Toe" target="_blank">
                      <i class="ri-github-line"> View</i>
                   </a>
                </div>
@@ -238,7 +309,7 @@
             <article class="projects__card">
                <div class="projects__image">
                   <img class="projects__img" src="img/proj-3.jpg" alt="image">
-                  <a class="projects__button button" href="https://maliksaqibahmad.github.io/watches/" target="_blank">
+                  <a class="projects__button button" href="https://druxamb.github.io/Rolex-Wrist-Watch/" target="_blank">
                      <i class="ri-arrow-right-up-line"></i>
                   </a>
                </div>
@@ -250,15 +321,37 @@
                   </p>
                </div>
                <div class="projects__buttons">
-                  <a class="projects__link" href="https://github.com/maliksaqibahmad/watches" target="_blank">
+                  <a class="projects__link" href="https://github.com/DruxAMB/Rolex-Wrist-Watch" target="_blank">
                      <i class="ri-github-line"> View</i>
                   </a>
                </div>
             </article>
+
+            <article class="projects__card">
+               <div class="projects__image">
+                  <img class="projects__img" src="img/fantasy.PNG" alt="image">
+                  <a class="projects__button button" href="https://fantasy-clone.vercel.app/" target="_blank">
+                     <i class="ri-arrow-right-up-line"></i>
+                  </a>
+               </div>
+               <div class="projects__content">
+                  <h3 class="projects__subtitle">Website</h3>
+                  <h2 class="projects__title">Fantasy Website Clone</h2>
+                  <p class="projects__description">
+                     A fFantasy desktop site clone
+                  </p>
+               </div>
+               <div class="projects__buttons">
+                  <a class="projects__link" href="https://github.com/DruxAMB/fantasy-clone" target="_blank">
+                     <i class="ri-github-line"> View</i>
+                  </a>
+               </div>
+            </article>
+
          </div>
       </section>
 
-      <section class="certs section" id="certs">
+      <!-- <section class="certs section" id="certs">
          <h2 class="section__title-2">
             <span>Certifications.</span>
          </h2>
@@ -291,7 +384,7 @@
             </article>
 
          </div>
-      </section>
+      </section> -->
 
       <section class="services section">
          <h2 class="section__title-2">
@@ -411,16 +504,19 @@
                </div>
 
                <div class="contact__social-links">
-                  <a class="contact__social-link" href="mailto:maliksaqib.dev@gmail.com">
+                  <a class="contact__social-link" href="mailto:druxambsite@gmail.com">
                      <i class="ri-mail-line"></i>
                   </a>
+                  <a class="contact__social-link" href="https://twitter.com/DruxAMB">
+                     <i class="ri-twitter-line"></i>
+                  </a>
 
-                  <a class="contact__social-link" href="https://www.instagram.com/__sq1b__/" target="_blank">
+                  <a class="contact__social-link" href="https://www.instagram.com/druxamb/" target="_blank">
                      <i class="ri-instagram-line"></i>
                   </a>
 
-                  <a class="contact__social-link" href="https://www.linkedin.com/in/malik-saqib-236744255/" target="_blank">
-                     <i class="ri-linkedin-box-line"></i>
+                  <a class="contact__social-link" href="https://github.com/DruxAMB" target="_blank">
+                     <i class="ri-github-line"></i>
                   </a>
                </div>
             </div>
@@ -444,7 +540,7 @@
 
          <span class="footer__copy">
             &#169; All Rights Reserved By
-            <a href="#">Saqib.</a>
+            <a href="#">DruxAMB</a>
          </span>
       </div>
    </footer>
@@ -462,6 +558,7 @@
     </div>
 
    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+   <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 
    <script src="main.js"></script>
 
