--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                   <h3 class="projects__subtitle">Website</h3>
                   <h2 class="projects__title">Fantasy Website Clone</h2>
                   <p class="projects__description">
-                     A fFantasy desktop site clone
+                     A Fantasy desktop site clone
                   </p>
                </div>
                <div class="projects__buttons">
