--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                </li>
 
                <li class="nav__item">
-                  <a href="https://eu.docs.wps.com/l/sIF2CvJPMAeD-maoG?v=v2" class="nav__link nav__link-button">Resume <i class="ri-download-2-fill"></i></a>
+                  <a href="https://drux-amb-resume.vercel.app/" class="nav__link nav__link-button">Resume <i class="ri-download-2-fill"></i></a>
                </li>
 
             </ul>
