Changed my résumé

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                </li>
 
                <li class="nav__item">
-                  <a href="https://drux-amb-resume.vercel.app/" class="nav__link nav__link-button">Resume <i class="ri-download-2-fill"></i></a>
+                  <a href="https://drive.google.com/file/d/1JkPW-qmE9uKcb_sYXOSiuSfY8qJq4JO9/view?usp=sharing" class="nav__link nav__link-button">Resume <i class="ri-download-2-fill"></i></a>
                </li>
 
             </ul>
