added some new projects

--- a/index.html
+++ b/index.html
@@ -220,6 +220,66 @@
 
             <article class="projects__card">
                <div class="projects__image">
+                  <img class="projects__img" src="imG/ip-address-tracker.PNG" alt="image">
+                  <a class="projects__button button" href="https://drux-amb-ip-address-tracker.vercel.app/" target="_blank">
+                     <i class="ri-arrow-right-up-line"></i>
+                  </a>
+               </div>
+               <div class="projects__content">
+                  <h3 class="projects__subtitle">Website</h3>
+                  <h2 class="projects__title">IP Address Tracker</h2>
+                  <p class="projects__description">
+                     It helps in tracking the current location of an IP ADDRESS
+                  </p>
+               </div>
+               <div class="projects__buttons">
+                  <a class="projects__link" href="https://github.com/DruxAMB/DruxAMB---IP-Address-Tracker" target="_blank">
+                     <i class="ri-github-line"> View</i>
+                  </a>
+               </div>
+            </article>
+            <article class="projects__card">
+               <div class="projects__image">
+                  <img class="projects__img" src="imG/kafsol-store5.PNG" alt="image">
+                  <a class="projects__button button" href="https://kafsol-store.vercel.app/" target="_blank">
+                     <i class="ri-arrow-right-up-line"></i>
+                  </a>
+               </div>
+               <div class="projects__content">
+                  <h3 class="projects__subtitle">Website</h3>
+                  <h2 class="projects__title">Kafsol Store</h2>
+                  <p class="projects__description">
+                     A wholesaler e-cormmerce website
+                  </p>
+               </div>
+               <div class="projects__buttons">
+                  <a class="projects__link" href="https://github.com/DruxAMB/kafsol-Store" target="_blank">
+                     <i class="ri-github-line"> View</i>
+                  </a>
+               </div>
+            </article>
+            <article class="projects__card">
+               <div class="projects__image">
+                  <img class="projects__img" src="imG/Card Validation.PNG" alt="image">
+                  <a class="projects__button button" href="https://drux-amb-interactive-card-details-form-main.vercel.app/" target="_blank">
+                     <i class="ri-arrow-right-up-line"></i>
+                  </a>
+               </div>
+               <div class="projects__content">
+                  <h3 class="projects__subtitle">Website</h3>
+                  <h2 class="projects__title">Interactive Card Details</h2>
+                  <p class="projects__description">
+                     A simple card details collector
+                  </p>
+               </div>
+               <div class="projects__buttons">
+                  <a class="projects__link" href="https://github.com/DruxAMB/DruxAMB---interactive-card-details-form-main" target="_blank">
+                     <i class="ri-github-line"> View</i>
+                  </a>
+               </div>
+            </article>
+            <article class="projects__card">
+               <div class="projects__image">
                   <img class="projects__img" src="img/david.PNG" alt="image">
                   <a class="projects__button button" href="https://drux-amb-1st-portfolio-bpnj.vercel.app/" target="_blank">
                      <i class="ri-arrow-right-up-line"></i>
