fixing my portfolio images

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
             <article class="projects__card">
                <div class="projects__image">
-                  <img class="projects__img" src="imG/ip-address-tracker.PNG" alt="image">
+                  <img class="projects__img" src="imG/ip-address-tracker.png" alt="image">
                   <a class="projects__button button" href="https://drux-amb-ip-address-tracker.vercel.app/" target="_blank">
                      <i class="ri-arrow-right-up-line"></i>
                   </a>
@@ -240,7 +240,7 @@
             </article>
             <article class="projects__card">
                <div class="projects__image">
-                  <img class="projects__img" src="imG/kafsol-store5.PNG" alt="image">
+                  <img class="projects__img" src="imG/kafsol-store.png" alt="image">
                   <a class="projects__button button" href="https://kafsol-store.vercel.app/" target="_blank">
                      <i class="ri-arrow-right-up-line"></i>
                   </a>
@@ -260,7 +260,7 @@
             </article>
             <article class="projects__card">
                <div class="projects__image">
-                  <img class="projects__img" src="imG/Card Validation.PNG" alt="image">
+                  <img class="projects__img" src="imG/card-validation.png" alt="image">
                   <a class="projects__button button" href="https://drux-amb-interactive-card-details-form-main.vercel.app/" target="_blank">
                      <i class="ri-arrow-right-up-line"></i>
                   </a>
