updated my portfolio

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
    <header class="header" id="header">
       <nav class="nav container">
          <a href="#" class="nav__logo">
-            <span class="nav__logo-circle"><img src="./img/My Logo.png" alt=""></span>
+            <span class="nav__logo-circle"><img src="./img/My Logo.png" alt="logo"></span>
             <span class="nav__logo-name">ruxAMB</span>
          </a>
 
@@ -50,7 +50,7 @@
                </li>
 
                <li class="nav__item">
-                  <a href="https://drive.google.com/file/d/1JkPW-qmE9uKcb_sYXOSiuSfY8qJq4JO9/view?usp=sharing" class="nav__link nav__link-button">Resume <i class="ri-download-2-fill"></i></a>
+                  <a href="https://drive.google.com/file/d/1c9SUaxWs8FKAPiiowOOo9RIRXTJpom8V/view?usp=sharing" class="nav__link nav__link-button" target="_blank">Résumé  <i class="ri-download-2-fill"></i></a>
                </li>
 
             </ul>
@@ -89,6 +89,9 @@
                   <div class="home__social">
                      <a class="home__social-link" href="mailto:druxambsite@gmail.com">
                         <i class="ri-mail-line"></i>
+                     </a>
+                     <a class="home__social-link" href="https://www.linkedin.com/in/druxamb/" target="_blank">
+                        <i class="ri-linkedin-line"></i>
                      </a>
                      <a class="home__social-link" href="https://twitter.com/DruxAMB" target="_blank">
                         <i class="ri-twitter-line"></i>
@@ -133,17 +136,17 @@
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-plain.svg" alt="Skill 2">
                 <p>CSS</p>
             </div>
-            <div class="skill">          
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/devicon/devicon-original.svg" />
-                <p>DEVICON</p>
-            </div>
             <div class="skill">
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="Skill 3">
                 <p>JAVASCRIPT</p>
             </div>
             <div class="skill">
                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" alt="Skill 3">
-               <p>REACT</p>
+               <p>REACT JS</p>
+           </div>
+            <div class="skill">
+               <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nextjs/nextjs-original.svg" alt="Skill 3">
+               <p>NEXT JS</p>
            </div>
             <div class="skill">
                <iconify-icon icon="logos:vitejs" style="font-size: 5rem;"></iconify-icon>
@@ -170,7 +173,7 @@
    <p>BOOTSTRAP</p>
 </div>
 <div class="skill">
-   <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/tailwindcss/tailwindcss-plain.svg" alt="Skill 3">
+   <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/tailwindcss/tailwindcss-original.svg" alt="Skill 3">
    <p>TAILWIND</p>
 </div>
 <div class="skill">
@@ -188,6 +191,14 @@
 <div class="skill">
    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-plain.svg" alt="Skill 3">
    <p>MONGO DB</p>
+</div>
+<div class="skill">
+   <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/prisma/prisma-original.svg" alt="Skill 3">
+   <p>PRISMA</p>
+</div>
+<div class="skill">          
+<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/devicon/devicon-original.svg" />
+    <p>DEVICON</p>
 </div>
 <div class="skill">
    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original.svg" />
@@ -238,6 +249,7 @@
                   </a>
                </div>
             </article>
+
             <article class="projects__card">
                <div class="projects__image">
                   <img class="projects__img" src="imG/kafsol-store.png" alt="image">
@@ -258,6 +270,28 @@
                   </a>
                </div>
             </article>
+
+            <article class="projects__card">
+               <div class="projects__image">
+                  <img class="projects__img" src="img/gotocourse.PNG" alt="image">
+                  <a class="projects__button button" href="https://gotocourse.com/" target="_blank">
+                     <i class="ri-arrow-right-up-line"></i>
+                  </a>
+               </div>
+               <div class="projects__content">
+                  <h3 class="projects__subtitle">Website</h3>
+                  <h2 class="projects__title">Gotocourse Africa</h2>
+                  <p class="projects__description">
+                     Worked on 2 gotocourse template
+                  </p>
+               </div>
+               <div class="projects__buttons">
+                  <a class="projects__link" href="https://gotocourse.com/academy" target="_blank">
+                     <i class="ri-github-line">Viewing is Private</i>
+                  </a>
+               </div>
+            </article>
+
             <article class="projects__card">
                <div class="projects__image">
                   <img class="projects__img" src="imG/card-validation.png" alt="image">
@@ -278,6 +312,7 @@
                   </a>
                </div>
             </article>
+            
             <article class="projects__card">
                <div class="projects__image">
                   <img class="projects__img" src="img/david.PNG" alt="image">
@@ -294,27 +329,6 @@
                </div>
                <div class="projects__buttons">
                   <a class="projects__link" href="https://github.com/DruxAMB/David-Aiyegoro-Portfoli0" target="_blank">
-                     <i class="ri-github-line"> View</i>
-                  </a>
-               </div>
-            </article>
-
-            <article class="projects__card">
-               <div class="projects__image">
-                  <img class="projects__img" src="img/scientificCalculatorProject.PNG" alt="image">
-                  <a class="projects__button button" href="https://scientific-calculator-lyart.vercel.app/" target="_blank">
-                     <i class="ri-arrow-right-up-line"></i>
-                  </a>
-               </div>
-               <div class="projects__content">
-                  <h3 class="projects__subtitle">Website</h3>
-                  <h2 class="projects__title">Scientific Calculator Website</h2>
-                  <p class="projects__description">
-                     A Functional Scientific Calculator
-                  </p>
-               </div>
-               <div class="projects__buttons">
-                  <a class="projects__link" href="https://github.com/DruxAMB/scientific-calculator-" target="_blank">
                      <i class="ri-github-line"> View</i>
                   </a>
                </div>
@@ -563,7 +577,10 @@
                   <a class="contact__social-link" href="mailto:druxambsite@gmail.com">
                      <i class="ri-mail-line"></i>
                   </a>
-                  <a class="contact__social-link" href="https://twitter.com/DruxAMB">
+                  <a class="home__social-link" href="https://www.linkedin.com/in/druxamb/" target="_blank">
+                     <i class="ri-linkedin-line"></i>
+                  </a>
+                  <a class="contact__social-link" href="https://twitter.com/DruxAMB" target="_blank">
                      <i class="ri-twitter-line"></i>
                   </a>
 
