--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
             <article class="projects__card">
                <div class="projects__image">
-                  <img class="projects__img" src="imG/ip-address-tracker.png" alt="image">
+                  <img class="projects__img" src="img/ipAddressTracker.png" alt="image">
                   <a class="projects__button button" href="https://drux-amb-ip-address-tracker.vercel.app/" target="_blank">
                      <i class="ri-arrow-right-up-line"></i>
                   </a>
@@ -252,7 +252,7 @@
 
             <article class="projects__card">
                <div class="projects__image">
-                  <img class="projects__img" src="imG/kafsol-store.png" alt="image">
+                  <img class="projects__img" src="img/kafsolStore.png" alt="image">
                   <a class="projects__button button" href="https://kafsol-store.vercel.app/" target="_blank">
                      <i class="ri-arrow-right-up-line"></i>
                   </a>
@@ -294,7 +294,7 @@
 
             <article class="projects__card">
                <div class="projects__image">
-                  <img class="projects__img" src="imG/card-validation.png" alt="image">
+                  <img class="projects__img" src="img/cardValidation.png" alt="image">
                   <a class="projects__button button" href="https://drux-amb-interactive-card-details-form-main.vercel.app/" target="_blank">
                      <i class="ri-arrow-right-up-line"></i>
                   </a>
