@druxamb: added new project

--- a/index.html
+++ b/index.html
@@ -231,6 +231,27 @@
 
             <article class="projects__card">
                <div class="projects__image">
+                  <img class="projects__img" src="img/myComputerENGR.PNG" alt="image">
+                  <a class="projects__button button" href="https://myComputerENGR.com.ng/" target="_blank">
+                     <i class="ri-arrow-right-up-line"></i>
+                  </a>
+               </div>
+               <div class="projects__content">
+                  <h3 class="projects__subtitle">Website</h3>
+                  <h2 class="projects__title">myComputerENGR</h2>
+                  <p class="projects__description">
+                     Gadget ( computer, smartphones & apple devices ) Repair Company
+                  </p>
+               </div>
+               <div class="projects__buttons">
+                  <a class="projects__link" href="https://github.com/DruxAMB/" target="_blank">
+                     <i class="ri-github-line"> Source is Private </i>
+                  </a>
+               </div>
+            </article>
+
+            <article class="projects__card">
+               <div class="projects__image">
                   <img class="projects__img" src="img/ipAddressTracker.png" alt="image">
                   <a class="projects__button button" href="https://drux-amb-ip-address-tracker.vercel.app/" target="_blank">
                      <i class="ri-arrow-right-up-line"></i>
@@ -252,27 +273,6 @@
 
             <article class="projects__card">
                <div class="projects__image">
-                  <img class="projects__img" src="img/kafsolStore.png" alt="image">
-                  <a class="projects__button button" href="https://kafsol-store.vercel.app/" target="_blank">
-                     <i class="ri-arrow-right-up-line"></i>
-                  </a>
-               </div>
-               <div class="projects__content">
-                  <h3 class="projects__subtitle">Website</h3>
-                  <h2 class="projects__title">Kafsol Store</h2>
-                  <p class="projects__description">
-                     A wholesaler e-cormmerce website
-                  </p>
-               </div>
-               <div class="projects__buttons">
-                  <a class="projects__link" href="https://github.com/DruxAMB/kafsol-Store" target="_blank">
-                     <i class="ri-github-line"> View</i>
-                  </a>
-               </div>
-            </article>
-
-            <article class="projects__card">
-               <div class="projects__image">
                   <img class="projects__img" src="img/gotocourse.PNG" alt="image">
                   <a class="projects__button button" href="https://gotocourse.com/" target="_blank">
                      <i class="ri-arrow-right-up-line"></i>
@@ -282,12 +282,12 @@
                   <h3 class="projects__subtitle">Website</h3>
                   <h2 class="projects__title">Gotocourse Africa</h2>
                   <p class="projects__description">
-                     Worked on 2 gotocourse template
+                     Worked on 2 gotocourse website builder template
                   </p>
                </div>
                <div class="projects__buttons">
-                  <a class="projects__link" href="https://gotocourse.com/academy" target="_blank">
-                     <i class="ri-github-line">Viewing is Private</i>
+                  <a class="projects__link" href="https://github.com/DruxAMB/" target="_blank">
+                     <i class="ri-github-line">Source is Private</i>
                   </a>
                </div>
             </article>
@@ -308,6 +308,27 @@
                </div>
                <div class="projects__buttons">
                   <a class="projects__link" href="https://github.com/DruxAMB/DruxAMB---interactive-card-details-form-main" target="_blank">
+                     <i class="ri-github-line"> View</i>
+                  </a>
+               </div>
+            </article>
+            
+            <article class="projects__card">
+               <div class="projects__image">
+                  <img class="projects__img" src="img/kafsolStore.png" alt="image">
+                  <a class="projects__button button" href="https://kafsol-store.vercel.app/" target="_blank">
+                     <i class="ri-arrow-right-up-line"></i>
+                  </a>
+               </div>
+               <div class="projects__content">
+                  <h3 class="projects__subtitle">Website</h3>
+                  <h2 class="projects__title">Kafsol Store</h2>
+                  <p class="projects__description">
+                     A wholesaler e-cormmerce website
+                  </p>
+               </div>
+               <div class="projects__buttons">
+                  <a class="projects__link" href="https://github.com/DruxAMB/kafsol-Store" target="_blank">
                      <i class="ri-github-line"> View</i>
                   </a>
                </div>
@@ -350,27 +371,6 @@
                </div>
                <div class="projects__buttons">
                   <a class="projects__link" href="https://github.com/DruxAMB/carSite" target="_blank">
-                     <i class="ri-github-line"> View</i>
-                  </a>
-               </div>
-            </article>
-
-            <article class="projects__card">
-               <div class="projects__image">
-                  <img class="projects__img" src="img/tictaktoeGame.PNG" alt="image">
-                  <a class="projects__button button" href="https://tic-tac-toe-umber-pi.vercel.app/" target="_blank">
-                     <i class="ri-arrow-right-up-line"></i>
-                  </a>
-               </div>
-               <div class="projects__content">
-                  <h3 class="projects__subtitle">Website</h3>
-                  <h2 class="projects__title">Tic-Tac-Toe Website</h2>
-                  <p class="projects__description">
-                     A website format of tic-tac-toe
-                  </p>
-               </div>
-               <div class="projects__buttons">
-                  <a class="projects__link" href="https://github.com/DruxAMB/Tic-Tac-Toe" target="_blank">
                      <i class="ri-github-line"> View</i>
                   </a>
                </div>
